--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,62 @@ body{
     overflow-x: hidden;
     box-sizing: border-box;
     color: white;
-    background-color: black;
+    /* background-color: black;
     background-image: url('./assets/bg-desktop.png');
     background-repeat: repeat;
     background-position: top;
     background-size: contain;
-    backdrop-filter: blur(100px);
+    backdrop-filter: blur(10px); */
 }
+
+.background-style{
+  overflow-x: hidden;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.63), rgba(0, 0, 0, 0.623)), url('./assets/bg-desktop3.png');
+  background-attachment: scroll;
+  background-position: center;
+  background-repeat: repeat;
+  background-size: cover;
+}
+
+.center-sphere{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.animate-arrow{
+  animation-duration: 2.5s;
+  animation-name: arrowAnimation;
+  animation-iteration-count: infinite;
+}
+
+@keyframes arrowAnimation{
+  0%{
+    transform: translateY(30%);
+  }
+  50%{
+    transform: translateY(-30%);
+  }
+  100%{
+    transform: translateY(30%);
+  }
+}
+/* 
+
+@media (max-width: 600px) {
+
+  .header .word {
+    height: 30px;
+  }
+
+  .word {
+    height: 14px;
+    margin-bottom: 5px;
+    margin-right: 5px;
+  }
+
+  .paragraph {
+    margin-bottom: 20px;
+  }
+} */
