--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,6 @@ body{
     overflow-x: hidden;
     box-sizing: border-box;
     color: white;
-    /* background-color: black;
-    background-image: url('./assets/bg-desktop.png');
-    background-repeat: repeat;
-    background-position: top;
-    background-size: contain;
-    backdrop-filter: blur(10px); */
 }
 
 .background-style{
@@ -25,7 +19,7 @@ body{
   background-attachment: scroll;
   background-position: center;
   background-repeat: repeat;
-  background-size: cover;
+  background-size: contain;
 }
 
 .center-sphere{
@@ -52,21 +46,37 @@ body{
     transform: translateY(30%);
   }
 }
-/* 
 
-@media (max-width: 600px) {
+.nav-list li{
+  cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: relative;
+}
 
-  .header .word {
-    height: 30px;
-  }
 
-  .word {
-    height: 14px;
-    margin-bottom: 5px;
-    margin-right: 5px;
-  }
+.nav-list li::before{
+  content: "";
+  height: 2px;
+  width: 0%;
+  background-color: #C292DE;
 
-  .paragraph {
-    margin-bottom: 20px;
-  }
-} */
+  position: absolute;
+  top: 2.5ch;
+
+  transition: width 200ms ease;
+}
+
+.nav-list li:hover::before{
+  width: 100%;
+}
+
+.openHead{
+  background: linear-gradient(90deg, #C292DE 11.26%, #67B3E4 90.04%);
+  transition: all 3000ms ease;
+}
+
+.closeHead{
+  background: linear-gradient(90deg, rgba(194, 146, 222, 0.5) 6.71%, rgba(103, 179, 228, 0.5) 95.89%);
+}
+
