--- a/src/index.css
+++ b/src/index.css
@@ -2,31 +2,59 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500;600;700;800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600;700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@400;500;600;700&display=swap');
+
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 body{
     padding: 0;
     margin: 0;
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Merriweather Sans' 'sans-serif';
+    /* font-family: 'Catamaran', sans-serif; */
+    /* font-family: 'Righteous', cursive; */
+    /* font-family: 'Noto Sans Display', sans-serif; */
     overflow-x: hidden;
     box-sizing: border-box;
-    color: white;
+    color: gray;
+}
+
+textarea, select, input, button { 
+  outline: none;
+}
+:focus { 
+  outline-color: transparent; 
+  outline-style: none;
 }
 
 .background-style{
   overflow-x: hidden;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.63), rgba(0, 0, 0, 0.623)), url('./assets/bg-desktop3.png');
+  /* background-image: linear-gradient(rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0.1)), url('./assets/desktop4.png'); */
+  background: linear-gradient(circle, rgba(255,255,255,1) 0%, rgba(255,242,242,1) 100%);
   background-attachment: scroll;
   background-position: center;
   background-repeat: repeat;
   background-size: contain;
 }
 
-.center-sphere{
+.center-element{
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.sphere-animation{
+  animation-duration: 2.5s;
+  animation-name: sphereAnimation;
 }
 
 .animate-arrow{
@@ -47,6 +75,15 @@ body{
   }
 }
 
+@keyframes sphereAnimation{
+  from{
+    transform: scaleY(0.1);
+  }
+  to{
+    transform: scaleY(1);
+  }
+}
+
 .nav-list li{
   cursor: pointer;
   text-transform: uppercase;
@@ -62,7 +99,7 @@ body{
   background-color: #C292DE;
 
   position: absolute;
-  top: 2.5ch;
+  top: 3ch;
 
   transition: width 200ms ease;
 }
@@ -73,10 +110,27 @@ body{
 
 .openHead{
   background: linear-gradient(90deg, #C292DE 11.26%, #67B3E4 90.04%);
-  transition: all 3000ms ease;
+  font-weight: bold;
+  transition: none;
 }
 
 .closeHead{
   background: linear-gradient(90deg, rgba(194, 146, 222, 0.5) 6.71%, rgba(103, 179, 228, 0.5) 95.89%);
 }
 
+.icons-style{
+  background-color: none;
+  transition: transform 300ms ease-in;
+}
+.icons-style:hover{
+  background: linear-gradient(90deg, rgba(194, 146, 222, 0.5) 6.71%, rgba(103, 179, 228, 0.5) 95.89%);
+  transform: scale(1.05);
+}
+.icons-style:active{
+  transform: scale(0.95);
+  transition: all 100ms ease;
+}
+
+.transform-transition{
+  transition: transform 300ms ease-in-out;
+}
