--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,12 @@ textarea, select, input, button {
   background: linear-gradient(90deg, rgba(194, 146, 222, 0.5) 6.71%, rgba(103, 179, 228, 0.5) 95.89%);
 }
 
+.navItemBg:hover{
+  background: linear-gradient(90deg, rgba(194, 146, 222, 0.15) 6.71%, rgba(103, 179, 228, 0.15) 95.89%);
+  transform: scale(1.05);
+  transition: all 300ms ease-in-out;
+}
+
 .icons-style{
   background-color: none;
   transition: transform 300ms ease-in;
