--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,29 @@ body{
     color: gray;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; 
+} 
+
+::-webkit-scrollbar-thumb {
+  background: #888; 
+  border-radius: 7px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+::-webkit-scrollbar-thumb:active{
+  background: rgb(148, 148, 148);
+}
+::-webkit-scrollbar-track:hover{
+  background: rgb(216, 216, 216);
+}
+
 textarea, select, input, button { 
   outline: none;
 }
